# PINN-for-flow-around-a-cylinder

./: .gitignore  CMakeLists.txt  README.md  buildConfiguration.txt
include/: dense_layer.h  flow_field.h  matrix.h  pinn_model.h
scripts/: visulization.py
src/: dense_layer.cpp  flow_field.cpp  main.cpp  matrix.cpp  pinn_model.cpp
